# transcribe

./: .env.example  .gitignore  CONTINUOUS_RECORDING_PLAN.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  split_audio.sh  transcribe.py  transcribe_batch.sh
docs/: SETUP.md
scripts/: setup-env.sh
transcribe_local/: README.md  __init__.py  cli.py  database.py  diarizer.py  env.py  job_runner.py  models.py  paths.py  speaker_matcher.py  timezone_utils.py  title_generator.py  transcriber.py
transcribe_local/recorder/: __init__.py  daemon.py  uploader.py  vad_filter.py
transcribe_local/web/: __init__.py  app.py  config.py  jobs.py
transcribe_local/web/templates/: base.html  capture.html  index.html  settings.html  speakers.html  transcript.html
